# mario.tutorials

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  generate_architecture_diagram.py  install_mario_datasets.sh  mario_fmri_tutorial.ipynb  mario_fmri_tutorial_complete.ipynb  pyproject.toml  requirements.txt  setup_environment.sh  setup_mario_datasets.sh  train_mario_agent.py
.github/workflows/: ci.yml
derivatives/activations/: reduced_activations.pkl
models/: README.md  ppo_mario_4_levels_10000k_20251210_204311.json  ppo_mario_4_levels_10000k_20251210_204311.pth  ppo_mario_4_levels_1000k_20251209_224222.json  ppo_mario_4_levels_1000k_20251209_224222.pth  ppo_mario_all_levels_10000k_20251210_043953.json  ppo_mario_all_levels_10000k_20251210_043953.pth  training_log.json
notebooks/: 00_MAIN2025_educational.ipynb  00_dataset_overview.ipynb  00_presentation_RISE.ipynb  00_requirements.txt  01_dataset_exploration.ipynb  01_event_based_analysis.ipynb  01_requirements.txt  02_reinforcement_learning.ipynb  02_requirements.txt  02_session_glm.ipynb  03_brain_encoding.ipynb  03_brain_visualization.ipynb  03_requirements.txt  04_rl_agent.ipynb  05_brain_encoding.ipynb  06_summary.ipynb  MAIN2025_educational.ipynb  MAIN2025_educational_RL.ipynb  PRESENTATION_GUIDE.md  README.md  README_PRESENTATION.md
scripts/: generate_architecture_diagram.py  glm_utils.py  rl_utils.py  train_mario_agent.py  utils.py
scripts/drac/: setup.sh  train.slurm  train_w1l1_50M.slurm
src/: README.md  __init__.py  atlas_encoding_utils.py  encoding.py  encoding_utils.py  encoding_viz_utils.py  glm.py  glm_utils.py  parcellation.py  parcellation_utils.py  rl.py  rl_utils.py  rl_viz_utils.py  setup_utils.py  utils.py  visualization.py
